--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ integrations-source = "inotia00/revanced-integrations"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 version = "auto"
-#arch = "both"                                                      # arch: arm-v7a, arm64-v8a, both
+arch = "arm-v7a"                                                      # arch: arm-v7a, arm64-v8a, both
 included-patches = "custom-video-buffer"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
@@ -40,7 +40,7 @@ integrations-source = "inotia00/revanced-integrations"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-arch = "both"
+arch = "arm-v7a"
 version = "auto"
 
 [Twitter]
@@ -59,7 +59,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 included-patches = "sim-spoof"
 version = "30.1.3"
-arch = "both"
+arch = "arm-v7a"
 
 [Reddit]
 enabled = false
