--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 arch = "both"
 
 [Music-Extended]
+enabled = false
 app-name = "Music"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
@@ -57,14 +58,14 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 [TikTok]
 included-patches = "sim-spoof"
 arch = "arm-v7a"
-apkmirror-dlurl = "https://tiktok.en.uptodown.com/android/"
+apkmirror-dlurl = "https://tiktok.en.uptodown.com/android"
 
 [Reddit]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
 [Messenger]
-apkmirror-dlurl = "https://facebook-messenger.en.uptodown.com/android/"
+apkmirror-dlurl = "https://facebook-messenger.en.uptodown.com/android"
 arch = "arm-v7a"
 
 [Spotify]
