--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ integrations-source = "inotia00/revanced-integrations"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 included-patches = "custom-video-buffer"
-apkmonk-dlurl = "https://www.apkmonk.com/app/com.google.android.youtube/"
+apkmonk-dlurl = "https://www.apkmonk.com/app/com.google.android.youtube"
 arch = "both"
 
 [Music]
@@ -58,14 +58,14 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 [TikTok]
 included-patches = "sim-spoof"
 arch = "arm-v7a"
-apkmonk-dlurl = "https://www.apkmonk.com/app/com.zhiliaoapp.musically/"
+apkmonk-dlurl = "https://www.apkmonk.com/app/com.zhiliaoapp.musically"
 
 [Reddit]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
 [Messenger]
-apkmonk-dlurl = "https://www.apkmonk.com/app/com.facebook.orca/"
+apkmonk-dlurl = "https://www.apkmonk.com/app/com.facebook.orca"
 arch = "arm-v7a"
 
 [Spotify]
