--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ rv-brand = "ReVanced Extended"
 build-mode = "both"
 included-patches = "custom-video-buffer"
 uptodown-dlurl = "https://youtube.en.uptodown.com/android"
+arch = "both"
 
 [Music]
 enabled = false
