--- a/config.toml
+++ b/config.toml
@@ -23,8 +23,7 @@ integrations-source = "inotia00/revanced-integrations"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 included-patches = "custom-video-buffer"
-uptodown-dlurl = "https://youtube.en.uptodown.com/android"
-arch = "both"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music]
 enabled = false
