--- a/config.toml
+++ b/config.toml
@@ -13,4 +13,5 @@ patches-source = "kitadai31/revanced-patches-android6-7"
 integrations-source = "kitadai31/revanced-integrations"  
 cli-source = "kitadai31/revanced-cli"                                             
 version = "17.34.36"                                                     
-apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
+#apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
+uptodown-dlurl = "https://youtube.en.uptodown.com/android"
