--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,6 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 [TikTok]
 included-patches = "sim-spoof"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-apkmirror-arch = "arm-v7a"
 
 [Reddit]
 enabled = false
@@ -43,7 +42,7 @@ apkmirror-arch = "arm64-v8a + x86_64"
 
 [Messenger]
 enabled = true
-apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
+uptodown-dlurl = "https://facebook-messenger.en.uptodown.com/android"
 apkmirror-arch = "arm-v7a"
 
 [Spotify]
