--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,7 @@ integrations-source = "inotia00/revanced-integrations"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
+included-patches = "custom-video-buffer"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music]
@@ -37,17 +38,21 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 apkmirror-arch = "both"
 
 [Twitter]
+enabled = false
 build-mode = "apk"
 uptodown-dlurl = "https://twitter.en.uptodown.com/android"
 
 [Twitch]
+enabled = false
 uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 
 [TikTok]
-enabled = false
+enabled = true
+included-patches = "sim-spoof"
 uptodown-dlurl = "https://tiktok.en.uptodown.com/android"
 
 [Reddit]
+enabled = false
 uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
 
 [Lightroom]
@@ -56,13 +61,14 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
 apkmirror-arch = "arm64-v8a + x86_64"
 
 [Messenger]
-enabled = false
-apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
-apkmirror-arch = "arm64-v8a"
+enabled = true
+uptodown-dlurl = "https://facebook-messenger.en.uptodown.com/android"
+apkmirror-arch = "arm-v7a"
 
 [Spotify]
-enabled = false
+enabled = true
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+apkmirror-arch = "arm-v7a"
 
 [Citra]
 enabled = false
